syntax = "proto3";

package admin;

import "google/protobuf/timestamp.proto";

option go_package = "./;admin";

service AdminService {
    rpc FetchAll (FetchAllRequest) returns (FetchAllResponse);
}

message FetchAllRequest {
}

message FetchAllResponse {
    repeated CitizenPermit citizen_permits = 1;
}

message CitizenPermit {
    string passport_number = 1;
    string surname = 2;
    string given_names = 3;
    string date_of_birth = 4;
    string place_of_birth = 5;
    string gender = 6;
    string nationality = 7;
    string date_of_issue = 8;
    string expiry_date = 9;
    string issuing_authority = 10;
    google.protobuf.Timestamp permit_date = 11;
    string permit_location = 12;
    string permit_type = 13;
    string permit_state = 14;
}